--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 altair
 numpy
 pandas
-pydeck
+streamlit-audiorecorder
+streamlit-audiorec
+streamlit_webrtc
 streamlit
+openai
+audio-recorder-streamlit
+git+https://github.com/openai/whisper.git
